<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/sv_activity_settings"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/strock" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:orientation="vertical"
                android:paddingLeft="8dp" >

                <TextView
                    android:id="@+id/tv_fragment_settings_clear_cache"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:text="@string/clear_cache"
                    android:textColor="@color/primary_text"
                    android:textSize="@dimen/material_text_body2" />

                <TextView
                    android:id="@+id/tv_fragment_settings_cache_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@id/tv_fragment_settings_clear_cache"
                    android:textColor="@color/secondary_text"
                    android:textSize="@dimen/material_text_body2" />
            </LinearLayout>

            <ImageButton
                android:id="@+id/btn_fragment_settings_clear_cache"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_gravity="end"
                android:background="@drawable/image_button_selector"
                android:src="@drawable/ic_delete_black_24dp" />
        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/strock" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:orientation="vertical"
                android:paddingLeft="8dp" >

                <TextView
                    android:id="@+id/tv_activity_settings_change_mode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/night_mode"
                    android:textColor="@color/primary_text"
                    android:textSize="@dimen/material_text_body2" />

            </LinearLayout>

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/btn_activity_settings_change_mode"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_alignParentRight="true"
                android:gravity="center_vertical"
                android:layout_marginRight="8dp"
                android:textIsSelectable="false"
                android:textStyle="bold" 
                android:background="@android:color/transparent"
                />

        </RelativeLayout>
        
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/strock" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:orientation="vertical"
                android:paddingLeft="8dp" >

                <TextView
                    android:id="@+id/tv_activity_settings_change_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/change_size"
                    android:textColor="@color/primary_text"
                    android:textSize="@dimen/material_text_body2" />

            </LinearLayout>

            <Spinner
                android:id="@+id/sp_activity_settings_change_size"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
  android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="8dp"
                android:layout_gravity="end"
                android:entries="@array/size"
                />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@android:color/transparent" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/strock" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_centerVertical="true"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:paddingLeft="8dp" >

                <TextView
                    android:id="@+id/tv_fragment_settings_check_update"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/check_update"
                    android:textColor="@color/primary_text"
                    android:textSize="@dimen/material_text_body2" />

                <TextView
                    android:id="@+id/tv_fragment_settings_version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="aaa"
                    android:textColor="@color/secondary_text"
                    android:textSize="@dimen/material_text_body2" />
            </LinearLayout>

            <ImageButton
                android:id="@+id/btn_fragment_settings_check_update"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_gravity="end"
                android:background="@drawable/image_button_selector"
                android:src="@drawable/ic_get_app_black_24dp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_fragment_settings_feedback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/strock" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_centerVertical="true"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:paddingLeft="8dp" >

                <TextView
                    android:id="@+id/tv_fragment_settings_feedback"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/feedback"
                    android:textColor="@color/primary_text"
                    android:textSize="@dimen/material_text_body2" />
            </LinearLayout>

            <ImageButton
                android:id="@+id/btn_fragment_settings_feedback"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_gravity="end"
                android:background="@drawable/image_button_selector"
                android:src="@drawable/ic_feedback_black_24dp" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/ll_fragment_settings_feedback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/strock"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingBottom="8dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="8dp" 
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="内容："
                    android:textColor="@color/secondary_text"
                    android:textSize="@dimen/material_text_body2" />

                <EditText
                    android:id="@+id/et_fragment_settings_content"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:lines="5" 
                    android:maxLength="50"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="邮箱："
                    android:textColor="@color/secondary_text"
                    android:textSize="@dimen/material_text_body2" />

                <EditText
                    android:id="@+id/et_fragment_settings_email"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp" >

                <ImageButton
                    android:id="@+id/btn_fragment_settings_done_feedback"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="20dp"
                    android:background="@drawable/image_button_selector"
                    android:src="@drawable/ic_done_black_24dp"
                    android:textColor="@color/primary_text"
                    android:textSize="@dimen/material_text_button" />

                <ImageButton
                    android:id="@+id/btn_fragment_settings_cancel_feedback"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/image_button_selector"
                    android:src="@drawable/ic_close_black_24dp"
                    android:textColor="@color/primary_text"
                    android:textSize="@dimen/material_text_button" />
            </RelativeLayout>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/strock" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_centerVertical="true"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:paddingLeft="8dp" >

                <TextView
                    android:id="@+id/tv_fragment_settings_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about"
                    android:textColor="@color/primary_text"
                    android:textSize="@dimen/material_text_body2" />
            </LinearLayout>

            <ImageButton
                android:id="@+id/btn_fragment_settings_info"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_gravity="end"
                android:background="@drawable/image_button_selector"
                android:src="@drawable/ic_info_black_24dp" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/ll_fragment_settings_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/strock"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingBottom="8dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="8dp" 
            android:visibility="gone">

            <TextView
                android:id="@+id/tv_fragment_settings_info_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/software_info" 
                android:textColor="@color/primary_text"
                android:padding="16dp"
                />
        </LinearLayout>
    </LinearLayout>

</ScrollView>